turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:13: error: too many arguments for constructor Array: (_length: Int)Array[Int]
var T = new Array[Int](1,8,0)
        ^Turmite:47: error: not found: value setCouleur
  	setCouleur
        ^